--- a/projectBase/pom.xml
+++ b/projectBase/pom.xml
@@ -85,7 +85,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>-->
-
+		<!--<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.2.0</version>
+		</dependency>-->
 	</dependencies>
 
 	<build>
